--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,16 @@
 // Bootstrap main styles import
 @import 'bootstrap/bootstrap';
+
+.home-header {
+  height: 80vh;
+  min-height: 500px;
+  background-color: #000000;
+  background-image: url();
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  p{
+    max-width: 600px;
+  }
+}
