--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,3 +14,23 @@
     max-width: 600px;
   }
 }
+
+#home-sobre {
+
+  .row {
+
+    .col1 {
+      background-color: #000000;
+    }
+  }
+}
+
+#home-servicios {
+
+  .card {
+
+    .card-body {
+
+    }
+  }
+}
