--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,8 +10,15 @@
   background-position: center;
   color: #fff;
 
-  p{
+  h1 {
+    font-family: 'Forum', serif;
+    font-size: 4em;
     max-width: 600px;
+  }
+
+  p{
+    font-family: 'Montserrat', sans-serif;
+    max-width: 700px;
   }
 }
 
@@ -21,14 +28,78 @@
     width: 100%;
     max-width: 400px;
   }
+
+  h2 {
+    font-family: 'Forum', serif;
+    font-size: 3em;
+  }
+
+  p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+  }
 }
 
 #home-modalidad {
 
   .row {
+    box-shadow: 0 0.5rem 1rem hsla(294, 57%, 23%, 0.111) !important;
+    max-width: 1000px;
+    margin: auto;
 
     .col1 {
       background-color: #000000;
+      background-image: url("../img/background.jpg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
     }
+  }
+
+  h3 {
+    font-family: 'Forum', serif;
+    font-size: 3em;
+
+  }
+
+  li {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+  }
+}
+
+#home-servicios {
+  background-color: #9d5ba41a;
+
+  .card-body {
+    box-shadow: 0 0.5rem 1rem hsla(294, 57%, 23%, 0.111) !important;
+  }
+
+  h2, h4 {
+    font-family: 'Forum', serif;
+  }
+
+  h2 {
+    font-size: 3em;
+  }
+
+  h4 {
+    font-size: 2em;
+    color: #54195b;
+  }
+
+  li {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1em;
+    font-weight: 300;
+  }
+}
+
+footer {
+  background-color: #935699;
+
+  li {
+    list-style-type: none;
   }
 }
